@@ -12,21 +12,21 @@ t/10-new.t
 t/20-findagrave.t
 t/boiler.t
 t/changes.t
-t/coverage.t
 t/critic.t
 t/cv.t
 t/dist.t
 t/gv.t
 t/kwalitee.t
-t/link.t
 t/manifest.t
 t/metrics.t
 t/modules-used.t
-t/no404.t
+t/no404s.t
 t/noopentickets.t
 t/noplan.t
 t/online.enabled
 t/pod-cm.t
+t/pod-coverage.t
+t/pod-links.t
 t/pod-snippets.t
 t/pod-spelling.t
 t/pod.t
