@@ -3,11 +3,9 @@
 use strict;
 use warnings;
 
+use Test::DescribeMe qw(author);
 use Test::Most;
+use Test::Needs 'Test::Pod::Spelling::CommonMistakes';
 
-eval 'use Test::Pod::Spelling::CommonMistakes';
-if($@) {
-	plan skip_all => 'Test::Pod::Spelling::CommonMistakes required for testing POD spelling';
-} else {
-	all_pod_files_ok();
-}
+Test::Pod::Spelling::CommonMistakes->import();
+all_pod_files_ok();
